# docs/swagger.yaml
@@ -800,6 +800,33 @@ paths:
       summary: 리뷰 수정
       tags:
       - Review
+  /reviews/recent:
+    get:
+      consumes:
+      - application/json
+      description: 표준 타입의 음식이 최소 하나 포함된 리뷰를 최신순으로 가져온다.
+      parameters:
+      - description: 가져올 리뷰 개수 (최대 3개)
+        in: query
+        name: count
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 조회 성공
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Review'
+                  type: array
+              type: object
+      summary: 표준 음식이 포함된 최신 리뷰 조회
+      tags:
+      - Review
   /users/me:
     get:
       consumes:
